Fix cutting off of desktop nav links at <800px

--- a/website/themes/contact/assets/css/contact-theme.css
+++ b/website/themes/contact/assets/css/contact-theme.css
@@ -383,7 +383,7 @@ main {
 
   .nav-header {
     display: grid;
-    grid-template-columns: var(--default-spacing) auto minmax(600px, 3fr) var(
+    grid-template-columns: var(--default-spacing) auto minmax(400px, 3fr) var(
         --default-spacing
       );
   }
